--- a/app/views/about_us/main.html.erb
+++ b/app/views/about_us/main.html.erb
@@ -6,9 +6,8 @@
     <div id="content"><!-- content -->
       <div class="content_right_sidebar"><!-- left content -->
         <p>
-          LifeLine is a Minnesota-based organization authorized to distribute ZOLL Medical, Phillips Medical and
-          Medtronic medical devices.  LifeLine is also a Certified American Heart Association Training Center.
-          LifeLine specializes in the implementation of emergency response programs for businesses, churches,
+          LifeLine is a Minnesota-based organization authorized to distribute ZOLL Medical, Phillips Medical, HeartSine, Defibtech, Welch Allyn and
+          Physio medical devices. LifeLine specializes in the implementation of emergency response programs for businesses, churches,
           governments and non-profit organizations.<br /><br />
           LifeLine has been recognized as an industry leader having deployed AEDs, trained classes and implemented
           programs coast-to-coast for nearly 10 years.
