--- a/app/views/layouts/_footer_bottom.erb
+++ b/app/views/layouts/_footer_bottom.erb
@@ -1,7 +1,7 @@
 <div id="footer_bottom"><!-- FOOTER BOTTOM -->
   <div class="info">
     <div id="foot_left"><!-- FOOT LEFT -->
-      <p>Copyright&copy; 2012 LifeLine Incorporated.  All rights reserved.</p>
+      <p>Copyright&copy; 2003-2013 LifeLine Incorporated.  All rights reserved.</p>
     </div><!-- END FOOT LEFT -->
     <div id="foot_right"><!-- FOOT RIGHT -->
       <div class="top-footer"><%= link_to 'Top', "#", :class => "link-top" %></div>
